// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test cases for FormCalendar should render snapshot 1`] = `
<View
  style={Object {}}
>
  <Text
    style={
      Object {
        "color": "#33495E",
        "marginBottom": 6,
        "marginTop": 16,
      }
    }
    textType="regular"
    type="regular"
  >
    common:availableFrom
  </Text>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#C9D6DF",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 6,
        "paddingHorizontal": 20,
        "paddingVertical": 12,
      }
    }
    testID="toCalenderInput"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="#667686"
        name="calendar"
        size={18}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#001B36",
              "marginLeft": 16,
            },
            false,
          ]
        }
        textType="regular"
        type="small"
      >
        2020-11-01
      </Text>
    </View>
    <Icon
      allowFontScaling={false}
      color="#99A4AF"
      name="down-arrow-filled"
      size={16}
    />
  </ForwardRef>
  <BottomSheet
    headerTitle="common:availableFrom"
    isShadowView={true}
    onCloseSheet={[Function]}
    sheetHeight={580}
    visible={false}
  >
    <CalendarComponent
      onSelect={[Function]}
      selectedDate="2020-11-01"
    />
  </BottomSheet>
</View>
`;

exports[`Test cases for FormCalendar should render snapshot when initial date today 1`] = `
<View
  style={Object {}}
>
  <Text
    style={
      Object {
        "color": "#33495E",
        "marginBottom": 6,
        "marginTop": 16,
      }
    }
    textType="regular"
    type="regular"
  >
    common:availableFrom
  </Text>
  <ForwardRef
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "borderColor": "#C9D6DF",
        "borderRadius": 4,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginTop": 6,
        "paddingHorizontal": 20,
        "paddingVertical": 12,
      }
    }
    testID="toCalenderInput"
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <Icon
        allowFontScaling={false}
        color="#667686"
        name="calendar"
        size={18}
      />
      <Text
        style={
          Array [
            Object {
              "color": "#001B36",
              "marginLeft": 16,
            },
            false,
          ]
        }
        textType="regular"
        type="small"
      >
        Today
      </Text>
    </View>
    <Icon
      allowFontScaling={false}
      color="#99A4AF"
      name="down-arrow-filled"
      size={16}
    />
  </ForwardRef>
  <BottomSheet
    headerTitle="common:availableFrom"
    isShadowView={true}
    onCloseSheet={[Function]}
    sheetHeight={580}
    visible={false}
  >
    <CalendarComponent
      onSelect={[Function]}
      selectedDate="2020-10-15"
    />
  </BottomSheet>
</View>
`;
